# mc-assistant

./: .gitignore  .project  .pydevproject  README.md  todo.txt
Modeling/: CurrentThresholdCalc.py  ICalc.py  current_shift_calc.py  ui.py
Visualisation/: ArbApp.js  test-arbor.html  use_plot_examples.py
asm-call-graph/: GrClasses.py  LabelFindEngine.py  call_gr_finder.py
convertors_simple_data_types/: float32_convertors.py  test_float32_convertors.py  xintyy_type_convertors.py
embedded/cc-cmake-space/: CMakeLists.txt
embedded/cc-cmake-space/test/: eventLoop_test.cc
embedded/cc-cmake-test/: CMakeLists.txt  CMakeLists.txt.autosave
embedded/cc-cmake-test-build/: CMakeCache.txt  Makefile  cc-cmake-test.cbp  cmake_install.cmake
embedded/cc-cmake-ttes-space/: CMakeLists.txt
embedded/cmake-test/: CMakeLists.txt
embedded/cmake-test-build/: CMakeCache.txt  Makefile  cmake-test.cbp  cmake_install.cmake
embedded/time-triggered-arch-cmake-cc/: CMakeLists.txt
glue/test-cpy-py/: .project
models/: calc_current_threshold.py  calc_for_current_sensors.py  current_head.py  current_shift_calc.py  sensors_cfg_names.json  sensors_current.py  sensors_uni.py  sensors_voltage.py  shift_correction_model.py  thinks.txt  threshes.h  voltage_header.h
models/AirLiqCurves/: AirCurves.py  curve.txt
models/air_liq_curves/: AirCurvesDB.py  air_curves.py  bat.bat  sqlTest.py
models/hided/: ModelADDAC.py  UCalc.py  testModelADDAC.py
models/planthi/: todo.txt
models/sensor_cfgs/: current_sensor_cfg_286_052.json  current_sensor_cfg_526_051.json  current_sensor_cfg_template.json  voltage_sensor_cfg_286_052.json
models/sim/: tbl.MCH  (+3 more)
string_processing/: processors_mk_string.py
test-cpy-c/: .cproject  .project
test-qt-creator/: test-qc.exe.resource.txt  test-qc.ilk
tests/: test_sensor_channals.py
(+338 files in other folders)
